--- a/src/webapp/WEB-INF/pages/users.html
+++ b/src/webapp/WEB-INF/pages/users.html
@@ -19,7 +19,8 @@
         <td th:text="${user.name}"></td>
         <td th:text="${user.surname}"></td>
         <td>
-            <form th:action="@{'/users/edit'(id=${user.id})}" method="get" style="display:inline;">
+            <form th:action="@{/users/edit}" method="get" style="display:inline;">
+                <input type="hidden" name="id" th:value="${user.id}" />
                 <button type="submit">Редактировать</button>
             </form>
             <form th:action="@{/users/delete}" method="post" style="display:inline;">
